fix: messages overflow

--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
+    overflow: hidden;
 
     app-message-list {
       flex: 1 1 auto;
