--- a/src/app/message/message.component.scss
+++ b/src/app/message/message.component.scss
@@ -2,7 +2,7 @@
 
 :host {
   display: flex;
-  max-width: 550px;
+  max-width: min(550px, 100%);
   width: fit-content;
   
   .message {
@@ -11,7 +11,12 @@
     color: white;
     background-color: $color-secondary;
     border-radius: 2px 10px 10px 10px;
-    white-space: pre-wrap;
+    overflow: hidden;
+
+    p {
+      white-space: pre-wrap;
+      overflow-wrap: break-word;
+    }
 
     &.self {
       background-color: $color-primary;
